--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@types/node": "^16.18.106",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.168.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "three": "^0.168.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
